--- a/SGPP/DataAccess/DataAccess.csproj
+++ b/SGPP/DataAccess/DataAccess.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="ClientesDA.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="Suplidores.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
