--- a/SGPP/aPresentation/aPresentation.csproj
+++ b/SGPP/aPresentation/aPresentation.csproj
@@ -45,6 +45,7 @@
     <Compile Include="FrmPlantilla.Designer.cs">
       <DependentUpon>FrmPlantilla.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FrmPlantilla.resx">
