--- a/SGPP/aPresentacion/aPresentacion.csproj
+++ b/SGPP/aPresentacion/aPresentacion.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmClientes.cs" />
+    <Compile Include="FrmClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmClientes.designer.cs">
       <DependentUpon>FrmClientes.cs</DependentUpon>
     </Compile>
